# parallel_parameter_search

./: .gitignore  CMakeLists.txt  README  package.xml  requirements.txt  setup.py
config/: master.yaml  worker.yaml
evaluations/kick_01/: README.md  params.json
evaluations/kick_01_manual/: README.md  params.json
evaluations/kick_02/: README.md  params.json
evaluations/kick_kamikaze/: params.json
evaluations/kick_manual/: README.md  params.json
evaluations/kick_motpe/: README.md  params.json
evaluations/kick_motpe_2/: README.md  params.json
launch/: master.launch  restart_worler.launch  rviz_worker.launch  simulator.launch  test.launch  worker.launch
parallel_parameter_search/: abstract_ros_optimization.py  dynup_optimization.py  move_base_optimization.py  simulators.py  utils.py  walk_engine_optimization.py  walk_optimization.py  walk_stabilization.py
scripts/: Untitled.ipynb  dummy_node.py  evaluate_kick.py  evaluate_walk.py  launch_workers.py  memory_leak.py  multi_optim.py  optimize.py  optimize_dynup.py  optimize_kick.py  optimize_move_base.py  optimize_walk.py  optimize_webots.py  test_kickwrapper.py  test_sim.py  viz.py  viz_study.ipynb  viz_study2.ipynb  watch_worker.py
scripts/.ipynb_checkpoints/: viz_study-checkpoint.ipynb
scripts/scripts/: close_sim.py  evaluate_walk.py  optimize_dynup.py  optimize_move_base.py  optimize_walk.py  walk_evaluation_robotis_op2.pkl  walk_evaluation_wolfgang.pkl
src/parallel_parameter_search/: abstract_ros_optimization.py  dynup_optimization.py  kick_optimization.py  kick_worker.py  move_base_optimization.py  optimize.py  optimize_webots.py  simulators.py  train_master.py  utils.py  walk_engine_optimization.py  walk_optimization.py  walk_pybullet_optimization.py  walk_stabilization.py  walk_worker.py
src/parallel_parameter_search_old/: train_master.py
srv/: RequestParameters.srv  SubmitFitness.srv
worlds/: no_ball_flat.wbt
