<?xml version="1.0"?>
<package>
  <name>parallel_parameter_search</name>
  <version>1.0.0</version>
  <description>This package allows you to optimize a generic set of parameters for an arbitrary algorithm in a distributed way in the Gazebo simulator.</description>

  <maintainer email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>

  <run_depend>bitbots_msgs</run_depend>

  <export>
  </export>
</package>
