<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>parallel_parameter_search</name>
  <version>1.0.0</version>
  <description>This package allows you to optimize a generic set of parameters for an arbitrary algorithm in a distributed way in the Gazebo simulator.</description>

  <maintainer email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</maintainer>
  <license>BSD</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosconsole</build_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosconsole</exec_depend>

  <exec_depend>bitbots_msgs</exec_depend>

  <export>
  <build_type>ament_cmake</build_type>
  </export>
    </package>
