<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>parallel_parameter_search</name>
  <version>1.0.0</version>
  <description>This package allows you to optimize a generic set of parameters for an arbitrary algorithm in a distributed way in the Gazebo simulator.</description>

  <maintainer email="bestmann@informatik.uni-hamburg.de">Marc Bestmann</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>bitbots_msgs</exec_depend>
  <exec_depend>bitbots_quintic_walk</exec_depend>
  <exec_depend>wolfgang_pybullet_sim</exec_depend>
  <exec_depend>wolfgang_webots_sim</exec_depend>

  <export>
  <build_type>ament_cmake</build_type>
  </export>
    </package>
